[fix] Visible scrollbars

--- a/site/public/stylus/pages/project.styl
+++ b/site/public/stylus/pages/project.styl
@@ -90,8 +90,8 @@ body.project
             position absolute
             top 115px
             left 0
-            bottom 95px
-            width calc(100% + 15px)
+            bottom 90px
+            width calc(100% + 20px)
             overflow-y scroll
             overflow-x scroll
 
@@ -337,6 +337,7 @@ body.project
                 height 30px
                 background #4d5b8d
                 text-align center
+                z-index 1
 
                 .content
                     line-height 30px
@@ -372,7 +373,7 @@ body.project
                 top 0
                 left 0
                 bottom 0
-                width 215px
+                width 220px
                 padding-bottom 5px
                 background #4d5b8d
                 overflow-y scroll
@@ -463,8 +464,8 @@ body.project
             section.code
                 position absolute
                 top 30px
-                right -15px
-                bottom -15px
+                right -20px
+                bottom -20px
                 left 200px
                 background #31344a
                 overflow-y scroll
